[package]
name = "plonky2-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = "0.1.3"
plonky2_ecdsa = "0.1.0"
anyhow = "1.0.56"
serde = "1.0.171"
serde_json = "1.0.103"
rand = "0.8.5"
rand_chacha = "0.3.1"
num = "0.4.0"